Layer refactoring